[BISECTED] amdgpu: BUG: kernel NULL pointer dereference, followed by lockups
00:02.0 VGA compatible controller [0300]: Intel Corporation HD Graphics 530 [8086:191b] (rev 06)
01:00.0 Display controller [0380]: Advanced Micro Devices, Inc. [AMD/ATI] Amethyst XT [Radeon R9 M295X / M390X] [1002:6921]
This is a Skylake/Tonga PRIME laptop - Alienware 15 R3
BUG: kernel NULL pointer dereference, address: 0000000000000020
#PF: supervisor write access in kernel mode
#PF: error_code(0x0002) - not-present page
PGD 0 P4D 0
Oops: 0002 [#1] SMP NOPTI
CPU: 5 PID: 890 Comm: glxinfo Tainted: G U I 5.14.0-rc3-tip+ #2813
Hardware name: Alienware Alienware 15 R2/0H6J09, BIOS 1.13.1 06/10/2021
RIP: 0010:mutex_lock+0x14/0x30
Code: c3 0f 1f 44 00 00 ba 02 01 00 00 e9 76 fd ff ff cc cc cc cc cc cc 53 48 89 fb e8 27 f5 ff ff 65 48 8b 0c 25 80 7c 01 00 31 c0 <f0> 48 0f b1 0b 74 06 48 89 df 5b eb 0f 5b c3 66 2e 0f 1f 84 00 00
RSP: 0018:ffff888106a1f468 EFLAGS: 00010246
RAX: 0000000000000000 RBX: 0000000000000020 RCX: ffff888113849d00
RDX: ffffffff835a3b20 RSI: ffffffff82d1f2de RDI: 0000000000000020
RBP: ffff888106a1f860 R08: 0000000000000000 R09: 0000000000000000
R10: 0000000000000000 R11: 0000000000000001 R12: ffff888100fd0800
R13: 0000000000000000 R14: ffff888106a1f490 R15: 0000000000000006
FS: 00007f2be4e2e740(0000) GS:ffff8888a1d40000(0000) knlGS:0000000000000000
CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 0000000000000020 CR3: 00000001466f8006 CR4: 00000000001706a0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
Call Trace:
? flush_workqueue+0x90/0x4f0
? amdgpu_dm_atomic_commit_tail+0x481/0x2430
? amdgpu_atom_execute_table_locked+0x29d/0x350
? kfree+0x179/0x2d0
? atom_op_and+0xc7/0x1a0
? __cond_resched+0x11/0x40
? __ww_mutex_lock+0x41/0x840
? dm_update_crtc_state+0x142/0xa60
? dm_plane_helper_prepare_fb+0x1ba/0x240
? commit_tail+0x8f/0x180
? drm_atomic_helper_commit+0x1f3/0x210
? drm_atomic_helper_commit_duplicated_state+0xf6/0x100
? drm_atomic_helper_resume+0xbc/0x150
? dm_resume.llvm.16242113224083660454+0x5ba/0x630
? amdgpu_device_resume+0x1d5/0x420
? amdgpu_pmops_runtime_resume+0xa7/0xd0
? pci_pm_runtime_resume+0xa2/0xe0
? pci_pm_runtime_suspend+0x180/0x180
? __rpm_callback+0x95/0x320
? pci_pm_runtime_suspend+0x180/0x180
? rpm_resume+0x490/0x720
? __flush_work.llvm.6404254195408965604+0x7d/0x280
? __pm_runtime_resume+0x53/0x70
? amdgpu_driver_open_kms+0x57/0x220
? drm_file_alloc+0x19a/0x260
? drm_open+0xd8/0x210
? drm_stub_open+0xa2/0x120
? chrdev_open.llvm.17900755245732444820+0xe2/0x1e0
? cd_forget+0x60/0x60
? do_dentry_open+0x135/0x340
? path_openat+0x8dd/0xb70
? _copy_to_iter+0xa5/0x5d0
? __cond_resched+0x11/0x40
? do_filp_open+0xa8/0x130
? do_sys_openat2+0x7f/0x130
? __x64_sys_openat+0x6a/0x70
? do_syscall_64+0x70/0xa0
? entry_SYSCALL_64_after_hwframe+0x44/0xae
Modules linked in:
CR2: 0000000000000020
---[ end trace 0a4aaf8bd99b6988 ]---
RIP: 0010:mutex_lock+0x14/0x30
Code: c3 0f 1f 44 00 00 ba 02 01 00 00 e9 76 fd ff ff cc cc cc cc cc cc 53 48 89 fb e8 27 f5 ff ff 65 48 8b 0c 25 80 7c 01 00 31 c0 <f0> 48 0f b1 0b 74 06 48 89 df 5b eb 0f 5b c3 66 2e 0f 1f 84 00 00
RSP: 0018:ffff888106a1f468 EFLAGS: 00010246
RAX: 0000000000000000 RBX: 0000000000000020 RCX: ffff888113849d00
RDX: ffffffff835a3b20 RSI: ffffffff82d1f2de RDI: 0000000000000020
RBP: ffff888106a1f860 R08: 0000000000000000 R09: 0000000000000000
R10: 0000000000000000 R11: 0000000000000001 R12: ffff888100fd0800
R13: 0000000000000000 R14: ffff888106a1f490 R15: 0000000000000006
FS: 00007f2be4e2e740(0000) GS:ffff8888a1d40000(0000) knlGS:0000000000000000
CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 0000000000000020 CR3: 00000001466f8006 CR4: 00000000001706a0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
Full dmesg dmesg.bug